--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
+    "scandit-sdk": "^5.15.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
